--- a/Web_Dev/src/index.css
+++ b/Web_Dev/src/index.css
@@ -1,11 +1,15 @@
-@import "tailwindcss";
 
+
+html, body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  margin: 0;
-  padding: 0;
+
 
   /* color-scheme: light dark; */
   /* color: rgba(255, 255, 255, 0.87); */
@@ -16,3 +20,4 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+@import "tailwindcss";
